# rn

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/cmd/: app.rs  mod.rs  project.rs
src/core/: axum.rs  mod.rs  salvo.rs
src/internal/: axum.rs  mod.rs  salvo.rs
template/: Dockerfile.tera  dockerun.tera  gitignore.tera
template/axum/: Cargo.tera  README.tera
template/axum/app/: Cargo.tera  config.tera  main.tera
template/axum/app/cmd/: serve.tera
template/axum/app/handler/: greeter.tera
template/axum/app/middleware/: auth.tera
template/axum/app/router/: mod.tera  route.tera
template/axum/app/service/: greeter.tera
template/axum/app/src/: main.tera
template/axum/domain/: Cargo.tera
template/axum/infra/: Cargo.tera  lib.tera
template/axum/infra/cache/: redis_pool.tera
template/axum/infra/entity/: mod.tera  table.tera
template/axum/infra/src/: lib.tera
template/axum/internal/: lib.tera
template/axum/internal/util/: identity.tera
template/axum/repo/: Cargo.tera
template/axum/shared/code/: mod.tera  rejection.tera
template/axum/shared/core/: cache.tera  db.tera  logger.tera  mod.tera
template/axum/shared/middleware/: catch_panic.tera  log.tera  mod.tera  monitor.tera  panic.tera  trace.tera
template/axum/shared/util/: helper.tera  identity.tera
template/salvo/: Cargo.tera  README.tera
template/salvo/app/: Cargo.tera  config.tera  main.tera
template/salvo/app/cmd/: serve.tera
template/salvo/app/handler/: greeter.tera
template/salvo/app/middleware/: auth.tera
template/salvo/app/router/: mod.tera  route.tera
template/salvo/domain/: Cargo.tera
template/salvo/infra/: Cargo.tera
template/salvo/repo/: Cargo.tera
(+84 files in other folders)
