[package]
name = "radon"
version = "0.0.1"
edition = "2021"
description = "Rust web development scaffolding, support salvo and axum."
license = "Apache-2.0"
repository = "https://github.com/noble-gase/rn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "radon"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tera = "1"
serde = { version = "1.0", features = ["derive"] }
