[package]
name = "rnx"
version = "0.4.0"
edition = "2021"
description = "Rust web development scaffolding, support salvo and axum."
license = "MIT"
repository = "https://github.com/noble-gase/rn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rnx"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tera = "1"
serde = { version = "1.0", features = ["derive"] }
